[project.scripts]
prep2dbt = "cli:cli"

[metadata]
name = prep2dbt
version = attr: prep2dbt.__version__.__version__
author = Tomomi Kodama
author_email = t.kodama@datumstudio.jp
description = Tools for converting Tableau Prep flows to dbt models
long_description = file: README.md
license = MIT
classifiers =
    Development Status :: 3 - Alpha

project_urls =
    Documentation = https://github.com/t0momi219/prep2dbt
    Changelog = https://github.com/t0momi219/prep2dbt
    Source = https://github.com/t0momi219/prep2dbt
    Tracker = https://github.com/t0momi219/prep2dbt

[options]
python_requires = >=3.11
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    click>=8.1.7
    networkx>=3.2.1
    pandas>=2.1.4
    ruamel.yaml>=0.18.5
    snowflake-sqlalchemy>=1.5.1
    sqlalchemy[mypy]>=1.4.50

[options.extras_require]
autoflake>=2.2.1
black>=23.12.1
esbonio>=0.16.3
isort>=5.13.2
mypy>=1.8.0
networkx-stubs>=0.0.1
pandas-stubs>=2.1.4.231227
pytest>=7.4.3
pytest-cov>=4.1.0
pytest-mock>=3.12.0
sphinx>=7.2.6
sphinx-press-theme>=0.8.0
